# serializer version: 1
# name: TestNotificationsStatusUpdate.test_forbidden
  dict({
    'code': 'drf.permission_denied',
    'message': 'At least one verified gadget is required',
    'success': False,
  })
# ---
# name: TestNotificationsStatusUpdate.test_notification_does_not_exist
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'notification': list([
        '00000000-0000-0000-0000-000000000000',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestNotificationsStatusUpdate.test_notification_not_pending
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'notification': list([
        '00000000-0000-0000-0000-000000000000',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestNotificationsStatusUpdate.test_notification_not_user
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'notification': list([
        '00000000-0000-0000-0000-000000000000',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestNotificationsStatusUpdate.test_set_pending
  dict({
    'code': 'api.bad_request',
    'message': 'Invalid update status',
    'success': False,
  })
# ---
# name: TestNotificationsStatusUpdate.test_success
  dict({
    'message': 'Notification status updated',
    'success': True,
  })
# ---
# name: TestNotificationsStatusUpdate.test_unauthorized
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
# name: TestNotificationsStatusUpdate.test_user_deleted
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
